--- a/backend/SampleConnection/postFunctions.html
+++ b/backend/SampleConnection/postFunctions.html
@@ -87,6 +87,7 @@
     <p> Patient ID <input type = "text" id = "appointment_patient_id"></p>
     <p> Appointment Type ID <input type = "text" id = "appointment_appointment_type_id"></p>
     <p> Status ID <input type = "text" id = "appointment_status_id"></p>
+    <p> Appointment Date <input type = "text" id = "appointment_date"></p>
     <button id = "appointment_button">Add Appointment</button>
 
     <!-- Insert ActivatedNFC Patient Info -->
@@ -319,16 +320,17 @@
 
     // Adding Appointment
     $('#appointment_button').click(function() {
-        var appointment_start_time = $('#appointment_start_time').val();
-        var appointment_end_time = $('#appointment_end_time').val();
-        var appointment_time_waited = $('#appointment_time_waited').val();
-        var appointment_patient_id = $('#appointment_patient_id').val();
-        var appointment_appointment_type_id = $('#appointment_appointment_type_id').val();
-        var appointment_status_id = $('#appointment_status_id').val();
+        var appointment_start_time = $('#appointment_start_time').val(); // getting Appointment Start Time val()
+        var appointment_end_time = $('#appointment_end_time').val(); // getting Appointment End Time val()
+        var appointment_time_waited = $('#appointment_time_waited').val(); // getting Appointment Time Waited val()
+        var appointment_patient_id = $('#appointment_patient_id').val(); // getting Appointment Patient ID val()
+        var appointment_appointment_type_id = $('#appointment_appointment_type_id').val(); // getting Appointment Type ID val()
+        var appointment_status_id = $('#appointment_status_id').val(); // getting Appointment Status ID val()
+        var appointment_date = $('#appointment_date').val(); // getting Appointment Date val()
         $.ajax({
             type: "POST",
             url: "http://localhost:3000/general/insert/Appointment/" +appointment_start_time +'/' +appointment_end_time +'/' +appointment_time_waited +'/'
-            +appointment_patient_id +'/' +appointment_appointment_type_id +'/' +appointment_status_id,
+            +appointment_patient_id +'/' +appointment_appointment_type_id +'/' +appointment_status_id +'/' +appointment_date,
             success: function (insert_status) {
                 $("#insert_status").append("Successful Insertion of Appointment</br>");
             },
