Updated landing and login page

--- a/frontend/swag/index.html
+++ b/frontend/swag/index.html
@@ -78,7 +78,7 @@
                   Username:<input type="text"/><br/>
                   Password:<input type="text"/>
                 </form>
-                <a class="btn btn-primary btn-xl" href="nightDash.HTML">LOGIN</a>
+                <a class="btn btn-primary btn-xl" href="newsettings.HTML">LOGIN</a>
             </div>
         </div>
     </header>
