--- a/frontend/swag/landingpage.html
+++ b/frontend/swag/landingpage.html
@@ -6,14 +6,118 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/tether/tether.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
+    <!-- Plugin JavaScript -->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
+    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
+    <!-- Custom scripts for this template -->
+    <script src="js/creative.min.js"></script>
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <style>
+    body {
+      font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif; }
+    .btn-default {
+      color: #222222;
+      border-color: white;
+      background-color: white; }
+      .btn-default:focus, .btn-default.focus {
+        color: #222222;
+        border-color: #bfbfbf;
+        background-color: #e6e6e6; }
+      .btn-default:hover {
+        color: #222222;
+        border-color: #e0e0e0;
+        background-color: #e6e6e6; }
+      .btn-default:active, .btn-default.active,
+      .open > .btn-default.dropdown-toggle {
+        color: #222222;
+        border-color: #e0e0e0;
+        background-color: #e6e6e6; }
+        .btn-default:active:hover, .btn-default:active:focus, .btn-default:active.focus, .btn-default.active:hover, .btn-default.active:focus, .btn-default.active.focus,
+        .open > .btn-default.dropdown-toggle:hover,
+        .open > .btn-default.dropdown-toggle:focus,
+        .open > .btn-default.dropdown-toggle.focus {
+          color: #222222;
+          border-color: #bfbfbf;
+          background-color: #d4d4d4; }
+      .btn-default:active, .btn-default.active,
+      .open > .btn-default.dropdown-toggle {
+        background-image: none; }
+      .btn-default.disabled:hover, .btn-default.disabled:focus, .btn-default.disabled.focus, .btn-default[disabled]:hover, .btn-default[disabled]:focus, .btn-default[disabled].focus,
+      fieldset[disabled] .btn-default:hover,
+      fieldset[disabled] .btn-default:focus,
+      fieldset[disabled] .btn-default.focus {
+        border-color: white;
+        background-color: white; }
+      .btn-default .badge {
+        color: white;
+        background-color: #222222; }
+    .inputForm{
+      border-radius: 300px;
+      color: red;
+    }
+    .btn-primary {
+      color: white;
+      border-color: #F05F40;
+      background-color: #FF9C33; }
+      .btn-primary:focus, .btn-primary.focus {
+        color: white;
+        border-color: #a4270d;
+        background-color: #eb3812; }
+      .btn-primary:hover {
+        color: white;
+        border-color: #e13612;
+        background-color: #eb3812; }
+      .btn-primary:active, .btn-primary.active,
+      .open > .btn-primary.dropdown-toggle {
+        color: white;
+        border-color: #e13612;
+        background-color: #eb3812; }
+        .btn-primary:active:hover, .btn-primary:active:focus, .btn-primary:active.focus, .btn-primary.active:hover, .btn-primary.active:focus, .btn-primary.active.focus,
+        .open > .btn-primary.dropdown-toggle:hover,
+        .open > .btn-primary.dropdown-toggle:focus,
+        .open > .btn-primary.dropdown-toggle.focus {
+          color: white;
+          border-color: #a4270d;
+          background-color: #c93110; }
+      .btn-primary:active, .btn-primary.active,
+      .open > .btn-primary.dropdown-toggle {
+        background-image: none; }
+      .btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled.focus, .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary[disabled].focus,
+      fieldset[disabled] .btn-primary:hover,
+      fieldset[disabled] .btn-primary:focus,
+      fieldset[disabled] .btn-primary.focus {
+        border-color: #F05F40;
+        background-color: #F05F40; }
+      .btn-primary .badge {
+        color: #FF9C33;
+        background-color: white; }
+
+    .btn {
+      font-weight: 700;
+      text-transform: uppercase;
+      border: none;
+      border-radius: 300px;
+      font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif; }
+
+    .btn-xl {
+      padding: 15px 30px; }
+
+
       body{
         background-image: url("stethbackground.jpg");
 
 
       }
+
       #pwd {
         width: 200px;
 
@@ -21,6 +125,7 @@
         float: right;
         margin-right: 44%;
         margin-top: -30px;
+        opacity: .5;
 
       }
 
@@ -58,6 +163,7 @@
         <input type="password" class="form-control" id="pwd">
       </div>
     </form>
+    <a style="float: right; margin-right: 47%; margin-top: 5%;" class="btn btn-primary btn-xl" href="nightDash.HTML">LOGIN</a>
       <!--<h1 id="title"> Optumistics <h1>-->
     </div>
 
